# Suminagashi

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
.github/workflows/: deploy-pages.yml
docs/: app.js  index.html  suminasashi.js  suminasashi.wasm
src/: Drops.cpp  app.cpp  app.h  colors.cpp  colors.h  drops.h  main.cpp  screenshot.cpp  screenshot.h  suminasashi.cpp  web_exports.cpp
